--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,15 @@
     <dimen name="login_btn_padding">10dp</dimen>
     <dimen name="login_screen_padding">8dp</dimen>
 
+    <dimen name="location_text_size">20dp</dimen>
+    <dimen name="location_padding">15dp</dimen>
+    <dimen name="location_btn_margin_top">30dp</dimen>
+    <dimen name="location_spinner_margin">8dp</dimen>
+
+    <dimen name="otp_text_width">200dp</dimen>
+
+    <dimen name="personal_info_padding">15dp</dimen>
+    <dimen name="mobile_padding">15dp</dimen>
+    <dimen name="confirm_padding">15dp</dimen>
+
 </resources>
