--- a/app/src/main/res/layout/fragment_personal_info.xml
+++ b/app/src/main/res/layout/fragment_personal_info.xml
@@ -32,12 +32,17 @@
         android:padding="@dimen/login_txt_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
+    <LinearLayout
+        android:layout_margin="@dimen/location_spinner_margin"
+        android:background="@drawable/custom_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <Spinner
         android:id="@+id/spinner_gender"
-        android:layout_margin="@dimen/location_spinner_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -51,24 +56,53 @@
     <LinearLayout
         android:id="@+id/linear_bottom"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/personal_info_padding"
         android:layout_below="@+id/horizontal"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <TextView
+            android:layout_marginTop="@dimen/personal_info_padding"
+            android:layout_marginRight="@dimen/personal_info_padding"
+            android:layout_marginLeft="@dimen/personal_info_padding"
+            android:text="@string/exam_location"
+            android:gravity="center"
+            android:textSize="@dimen/location_text_size"
+            android:textStyle="bold"
+            android:textColor="@color/text_color"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:id="@+id/linear_top"
+        android:layout_margin="@dimen/personal_info_padding"
+        android:layout_below="@+id/txt_title"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_margin="@dimen/location_spinner_margin"
+        android:background="@drawable/custom_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/spinner_state"
-            android:layout_margin="@dimen/location_spinner_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_margin="@dimen/location_spinner_margin"
+        android:background="@drawable/custom_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/spinner_city"
-            android:layout_margin="@dimen/location_spinner_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-
+    </LinearLayout>
+    </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
