--- a/app/src/main/res/layout/fragment_select_location.xml
+++ b/app/src/main/res/layout/fragment_select_location.xml
@@ -23,23 +23,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <LinearLayout
+            android:layout_margin="@dimen/location_spinner_margin"
+            android:background="@drawable/custom_edt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/spinner_state"
-            android:layout_margin="@dimen/location_spinner_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        </LinearLayout>
 
+    <LinearLayout
+        android:layout_margin="@dimen/location_spinner_margin"
+        android:background="@drawable/custom_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/spinner_district"
-            android:layout_margin="@dimen/location_spinner_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_margin="@dimen/location_spinner_margin"
+        android:background="@drawable/custom_edt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/spinner_city"
-            android:layout_margin="@dimen/location_spinner_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
