--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,10 @@
     <dimen name="mobile_padding">15dp</dimen>
     <dimen name="confirm_padding">15dp</dimen>
 
+    <dimen name="content_card_margin_left">6dp</dimen>
+    <dimen name="content_card_margin_top">6dp</dimen>
+    <dimen name="content_card_padding">4dp</dimen>
+
+    <dimen name="content_title_margin">5dp</dimen>
+
 </resources>
