--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="8dp"
-        android:progress="40"
+        android:progress="25"
         android:progressTint="@color/colorAccent"
         android:id="@+id/progress" />
 
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_previous"
+            android:foreground="?attr/selectableItemBackground"
             android:text="Cancel Registeration"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
@@ -45,6 +46,7 @@
             android:layout_height="match_parent"></LinearLayout>
         <Button
             android:id="@+id/btn_next"
+            android:foreground="?attr/selectableItemBackground"
             android:text="Next Step"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
