--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="login_txt_padding">15dp</dimen>
     <dimen name="login_txt_margin">10dp</dimen>
     <dimen name="login_img_margin_bottom">40dp</dimen>
+    <dimen name="logo_height">200dp</dimen>
+    <dimen name="login_width">200dp</dimen>
 
     <dimen name="login_btn_margin_bottom">40dp</dimen>
     <dimen name="login_btn_margin_left">50dp</dimen>
