--- a/app/src/main/res/drawable/ic_user.xml
+++ b/app/src/main/res/drawable/ic_user.xml
@@ -1,13 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp"
-    xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:pathData="M437.02,330.98c-27.883,-27.882 -61.071,-48.523 -97.281,-61.018C378.521,243.251 404,198.548 404,148C404,66.393 337.607,0 256,0S108,66.393 108,148c0,50.548 25.479,95.251 64.262,121.962c-36.21,12.495 -69.398,33.136 -97.281,61.018C26.629,379.333 0,443.62 0,512h40c0,-119.103 96.897,-216 216,-216s216,96.897 216,216h40C512,443.62 485.371,379.333 437.02,330.98zM148,148c0,-59.552 48.449,-108 108,-108s108,48.448 108,108s-48.449,108 -108,108S148,207.552 148,148z">
-        <aapt:attr name="android:fillColor">
-            <gradient android:endX="256" android:endY="512"
-                android:startX="256" android:startY="0" android:type="linear">
-                <item android:color="#FF2AF598" android:offset="0"/>
-                <item android:color="#FF009EFD" android:offset="1"/>
-            </gradient>
-        </aapt:attr>
-    </path>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M11.99,2C6.47,2 2,6.48 2,12s4.47,10 9.99,10C17.52,22 22,17.52 22,12S17.52,2 11.99,2zM12,20c-4.42,0 -8,-3.58 -8,-8s3.58,-8 8,-8 8,3.58 8,8 -3.58,8 -8,8zM15.5,11c0.83,0 1.5,-0.67 1.5,-1.5S16.33,8 15.5,8 14,8.67 14,9.5s0.67,1.5 1.5,1.5zM8.5,11c0.83,0 1.5,-0.67 1.5,-1.5S9.33,8 8.5,8 7,8.67 7,9.5 7.67,11 8.5,11zM12,17.5c2.33,0 4.31,-1.46 5.11,-3.5L6.89,14c0.8,2.04 2.78,3.5 5.11,3.5z"/>
 </vector>
