--- a/app/src/main/res/layout/fragment_select_location.xml
+++ b/app/src/main/res/layout/fragment_select_location.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/txt_title"
+        style="@style/title_text_style"
         android:text="@string/location_title"
         android:textSize="@dimen/location_text_size"
         android:textStyle="bold"
