--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,7 @@
 
         <Button
             android:id="@+id/btn_login"
+            style="@style/button_style"
             android:foreground="?attr/selectableItemBackground"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/login_btn_margin_bottom"
