1.Bottom nav activity created. 2.Edit profile UI

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,10 @@
     <dimen name="tc_dialog_padding">15dp</dimen>
     <dimen name="tc_dialog_text_size">17dp</dimen>
 
+    <dimen name="view_pager_margin">10dp</dimen>
+    <dimen name="profile_txt_padding">15dp</dimen>
+    <dimen name="profile_txt_margin">10dp</dimen>
+    <dimen name="profile_spinner_margin">10dp</dimen>
+    <dimen name="profile_padding">8dp</dimen>
+
 </resources>
