1.api with pagination 2.show notification list according its type 3.set logos

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,6 +93,7 @@
 
         <Button
             android:id="@+id/btn_forgot"
+            android:visibility="gone"
             android:foreground="?attr/selectableItemBackground"
             android:text="Forgot Password?"
             android:textAllCaps="false"
