--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -6,7 +6,8 @@
     tools:context=".fragment.NotificationFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/notification_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Notification" />
