--- a/app/src/main/res/drawable/custom_round_viewd.xml
+++ b/app/src/main/res/drawable/custom_round_viewd.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-   <solid android:color="@android:color/transparent"></solid>
+   <solid android:color="@color/amber_500"></solid>
 
-    <stroke android:color="@color/colorPrimary"
-        android:width="1dp"></stroke>
+   <!-- <stroke android:color="@color/colorPrimary"
+        android:width="1dp"></stroke>-->
 
     <corners android:radius="20dp" />
 
