--- a/app/src/main/res/drawable/custom_round_marked.xml
+++ b/app/src/main/res/drawable/custom_round_marked.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-   <solid android:color="@color/col_attempted"></solid>
+   <solid android:color="@color/col_marked"></solid>
 
    <!-- <stroke android:color="@color/colorPrimary"
         android:width="1dp"></stroke>-->
