--- a/app/src/main/res/drawable/custom_round_viewd.xml
+++ b/app/src/main/res/drawable/custom_round_viewd.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-   <solid android:color="@color/amber_500"></solid>
+   <solid android:color="@color/col_viewed"></solid>
 
    <!-- <stroke android:color="@color/colorPrimary"
         android:width="1dp"></stroke>-->
 
-    <corners android:radius="20dp" />
+    <corners android:radius="25dp" />
 
 </shape>
