--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -17,10 +17,12 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_below="@+id/header"
+        android:layout_above="@+id/footer"
         android:layout_width="match_parent"
-        android:layout_height="200dp"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     <RelativeLayout
+        android:id="@+id/footer"
         android:layout_alignParentBottom="true"
         android:padding="8dp"
         android:layout_width="match_parent"
