--- a/app/src/main/res/layout/item_qnum.xml
+++ b/app/src/main/res/layout/item_qnum.xml
@@ -3,6 +3,7 @@
     android:id="@+id/txt_qnum"
     android:gravity="center"
     android:text="1"
+    android:textColor="@android:color/white"
     android:layout_margin="4dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@drawable/custom_round"
