--- a/app/src/main/res/layout/item_questions.xml
+++ b/app/src/main/res/layout/item_questions.xml
@@ -2,15 +2,15 @@
 <RelativeLayout
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <com.narmware.vvmexam.support.ZoomLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
     <ImageView
         android:id="@+id/img_question"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/q_img_height" />
+        android:layout_height="match_parent" />
     </com.narmware.vvmexam.support.ZoomLayout>
 
     <TextView
