--- a/app/src/main/res/layout/item_questions.xml
+++ b/app/src/main/res/layout/item_questions.xml
@@ -14,6 +14,13 @@
     </com.narmware.vvmexam.support.ZoomLayout>
 
     <TextView
+        android:id="@+id/txt_question"
+        android:textSize="20sp"
+        android:layout_above="@+id/selected_opt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/selected_opt"
         android:textSize="20sp"
         android:layout_alignParentBottom="true"
