1.splash screen added 2.student data stored in realm db and displayed in std profile

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,6 +106,7 @@
 
     <LinearLayout
         android:id="@+id/lin_register"
+        android:visibility="gone"
         android:foreground="?attr/selectableItemBackground"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
