--- a/app/src/main/res/layout/fragment_school_profile.xml
+++ b/app/src/main/res/layout/fragment_school_profile.xml
@@ -31,52 +31,27 @@
                 app:cardCornerRadius="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:orientation="vertical"
+                    android:paddingTop="@dimen/profile_card_padding"
+                    android:paddingBottom="@dimen/profile_padding"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <LinearLayout
-                        android:layout_margin="@dimen/profile_spinner_margin"
-                        android:background="@drawable/custom_edt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <Spinner
-                            android:id="@+id/spinner_state"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_margin="@dimen/profile_spinner_margin"
-                        android:background="@drawable/custom_edt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <Spinner
-                            android:id="@+id/spinner_district"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_margin="@dimen/profile_spinner_margin"
-                        android:background="@drawable/custom_edt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <Spinner
-                            android:id="@+id/spinner_city"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
                     <android.support.design.widget.TextInputLayout
                         app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <android.support.design.widget.TextInputEditText
-                            android:id="@+id/edt_std_pincode"
+                            android:id="@+id/edt_sch_state"
+                            android:background="@drawable/single_line_bg"
                             style="@style/edittext_style"
-                            android:hint="Pincode"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:hint="State"
                             android:gravity="center_vertical"
                             android:layout_margin="@dimen/profile_txt_margin"
                             android:padding="@dimen/login_txt_padding"
@@ -87,13 +62,18 @@
 
                     <android.support.design.widget.TextInputLayout
                         app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <android.support.design.widget.TextInputEditText
-                            android:id="@+id/edt_std_address"
+                            android:id="@+id/edt_sch_district"
                             style="@style/edittext_style"
-                            android:hint="School Address"
+                            android:background="@drawable/single_line_bg"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:hint="District"
                             android:gravity="center_vertical"
                             android:layout_margin="@dimen/profile_txt_margin"
                             android:padding="@dimen/login_txt_padding"
@@ -101,6 +81,52 @@
                             android:layout_height="wrap_content" />
 
                     </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_sch_city"
+                            style="@style/edittext_style"
+                            android:background="@drawable/single_line_bg"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:hint="City"
+                            android:gravity="center_vertical"
+                            android:layout_margin="@dimen/profile_txt_margin"
+                            android:padding="@dimen/login_txt_padding"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        app:hintAnimationEnabled="true"
+                        android:textColorHint="@color/color_hint"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/edt_sch_name"
+                            style="@style/edittext_style"
+                            android:background="@drawable/single_line_bg"
+                            android:hint="School Name"
+                            android:focusable="false"
+                            android:cursorVisible="false"
+                            android:editable="false"
+                            android:gravity="center_vertical"
+                            android:layout_margin="@dimen/profile_txt_margin"
+                            android:padding="@dimen/login_txt_padding"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
