--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#1C374F</color>
+    <color name="colorPrimaryDark">#1C374F</color>
+    <color name="colorAccent">@color/amber_400</color>
 
     <color name="login_text_border">@color/grey_600</color>
     <color name="text_color">@color/grey_900</color>
@@ -13,5 +13,7 @@
     <color name="col_viewed">@color/amber_500</color>
     <color name="col_notviewed">@color/red_500</color>
     <color name="col_marked">@color/blue_500</color>
+
+    <color name="color_hint">@color/colorAccent</color>
 
 </resources>
