--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="profile_txt_margin">10dp</dimen>
     <dimen name="profile_spinner_margin">10dp</dimen>
     <dimen name="profile_padding">8dp</dimen>
+    <dimen name="profile_card_padding">10dp</dimen>
 
     <dimen name="note_padding">12dp</dimen>
     <dimen name="note_round_img_height">50dp</dimen>
