--- a/app/src/main/res/layout/fragment_exam_center.xml
+++ b/app/src/main/res/layout/fragment_exam_center.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.PersonalInfoFragment">
+    tools:context=".fragment.ExamCenterFragment">
 
     <TextView
         android:id="@+id/txt_title"
@@ -31,33 +31,57 @@
             android:elevation="5dp"
             android:layout_centerHorizontal="true"
             app:layout_anchorGravity="top|center"
-            android:layout_width="130dp"
-            android:layout_height="130dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/prof_image"
-                android:src="@drawable/vvm_logo_old"
-                android:layout_width="120dp"
-                android:layout_margin="1dp"
-                android:layout_height="match_parent" />
-
-            <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_image"
+                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/prof_image"
+                android:src="@drawable/vvm_logo_old"
+                android:layout_width="130dp"
+                android:layout_margin="3dp"
+                android:layout_height="130dp" />
+            </android.support.v7.widget.CardView>
 
-            <ImageButton
+            <LinearLayout
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/card_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <Button
                 android:id="@+id/btn_edit_prof_img"
+                android:text="Choose from Gallery"
                 android:foreground="?attr/selectableItemBackground"
-                android:background="@android:color/transparent"
-                app:srcCompat="@drawable/ic_create_color"
-                android:padding="4dp"
+                android:background="@drawable/custom_img_button"
+                android:textColor="@color/colorPrimary"
+                android:textAllCaps="false"
+                android:padding="8dp"
+                android:minHeight="1dp"
+                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            </RelativeLayout>
+
+                <Button
+                    android:id="@+id/btn_camera"
+                    android:text="Capture from Camera"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:background="@drawable/custom_img_button"
+                    android:textColor="@color/colorPrimary"
+                    android:textAllCaps="false"
+                    android:padding="8dp"
+                    android:minHeight="1dp"
+                    android:layout_margin="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </RelativeLayout>
 
