--- a/app/src/main/res/layout/item_state.xml
+++ b/app/src/main/res/layout/item_state.xml
@@ -5,7 +5,7 @@
     android:textColor="@color/text_color"
     style="@style/text_view_style"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 </TextView>
