--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
     <dimen name="otp_text_width">200dp</dimen>
 
     <dimen name="personal_info_padding">15dp</dimen>
+    <dimen name="personal_info_horizontal_margin">10dp</dimen>
     <dimen name="mobile_padding">15dp</dimen>
     <dimen name="confirm_padding">15dp</dimen>
 
