--- a/app/src/main/res/layout/fragment_exam_center.xml
+++ b/app/src/main/res/layout/fragment_exam_center.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:text="School Details"
+                android:text="Your alloted exam center"
                 android:layout_margin="@dimen/content_title_margin"
                 style="@style/title_text_style"
                 android:textColor="@color/text_color"
@@ -131,5 +131,30 @@
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:padding="@dimen/profile_padding"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="For more details contact us"
+                android:layout_margin="@dimen/content_title_margin"
+                style="@style/title_text_style"
+                android:textColor="@color/text_color"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_above="@id/btn_logout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+
     </LinearLayout>
+
 </ScrollView>
