--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -7,6 +7,7 @@
 
    <Button
        android:id="@+id/btn_logout"
+       android:layout_alignParentBottom="true"
        android:text="Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
