--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,6 @@
     <dimen name="q_btn_margin">5dp</dimen>
     <dimen name="q_img_height">200dp</dimen>
 
+    <dimen name="coord_padding">12dp</dimen>
+
 </resources>
